# agente_bdd

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  jobs.py  main.py
app/exceptions/: custom.py  handlers.py
app/mappers/: address_mapper.py  call_note_builder.py  field_merger.py  market_fit.py  note_builder.py  task_scheduler.py  tripadvisor_mapper.py
app/routers/: calificar_lead.py  enrichment.py  hacer_tareas.py  prospeccion.py
app/schemas/: booking.py  elevenlabs.py  enrichment.py  google_places.py  hubspot.py  instagram.py  responses.py  tavily.py  tripadvisor.py  website.py
app/services/: booking.py  calificar_lead.py  claude.py  elevenlabs.py  enrichment.py  google_places.py  hacer_tareas.py  hubspot.py  instagram.py  perplexity.py  prospeccion.py  tavily.py  tripadvisor.py  website_scraper.py
tests/: conftest.py  test_jobs.py
tests/test_mappers/: test_address_mapper.py  test_call_note_builder.py  test_field_merger.py  test_market_fit.py  test_note_builder.py  test_task_scheduler.py  test_tripadvisor_mapper.py
tests/test_routers/: test_calificar_lead.py  test_enrichment.py  test_hacer_tareas.py  test_prospeccion.py
tests/test_services/: test_booking.py  test_calificar_lead.py  test_claude.py  test_elevenlabs.py  test_enrichment.py  test_google_places.py  test_hacer_tareas.py  test_hubspot.py  test_instagram.py  test_perplexity.py  test_prospeccion.py  test_tavily.py  test_tripadvisor.py  test_website_scraper.py
