[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-bdd"
version = "0.1.0"
description = "HubSpot company enrichment agent using Google Places API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "beautifulsoup4>=4.12,<5",
    "duckduckgo-search>=7,<9",
    "holidays>=0.63,<1",
    "tzdata>=2024.1",
    "anthropic>=0.80,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx",
    "respx>=0.21,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
